# Dluau

./: .clangd  .gitignore  .gitmodules  .luaurc  .nvim.lua  CMakeLists.txt  CMakePresets.json  Core_API_Stub_Definitions.cpp  LuauXT.d.luau  README.md  abc.txt  build.ps1  core-stub.cpp  date_time.d.luau  dl_test.luau  dluau_definitions  dluau_docs.json  fstest.luau  global.d.luau  haluau.definitions.luau  libstub.cpp  lumin-core.d.luau  luminglobals.d.luau  minluau.definitions.luau  mod.luau  run.ps1  test.d.luau  test.luau  test.luau_  test2.luau  test3.luau  testreader.luau  tests.proj.luau
CLI/: CMakeLists.txt  cli.hpp  run.cpp
CLI/windows_host/: host.cpp
Common/: error_info.hpp  userdata_lazybuilder.hpp
Common_/: userdatatagged_lazybuilder_incomplete.hpp
Core/: CMakeLists.txt  api.cpp  dl_utility.cpp  dlimport.cpp  dll.cpp  dlmodule.cpp  dluau_ex.hpp  dluau_ex.hpz~  lfuncs.cpp  load.cpp  loading.cpp  opaque.cpp  precompile.cpp  preprocessing.cpp  require.cpp  require_logic.cpp  run.cpp  runtime_setup.cpp  scan.cpp_  task.cpp  task_library.cpp  type.cpp  type_related.cpp  version.cpp
Core/dlimport/: dlimport.cpp  dlimport.hpp  dlmodule.cpp  util.cpp
Core/include/: .lumin_core_api.h  common.hpp  dluau.h  dluau.hpp  lumin.h  luminfuncs.h
Core/os/: os.cpp  os.hpp
Extras/Console/: module.cpp
Extras/Date_Time/: duration.cpp  high_precision_time.cpp  module.cpp  time.cpp
Extras/Filesystem/: module.cpp  module.hpp  path.cpp
Extras/include/: .lumin_extras_api.h
Extras/require/: console.luau  date_time.luau  filesystem.luau
Modules/Console/: module.cpp
Modules/Date_Time/: duration.cpp  high_precision_time.cpp  module.cpp  module.hpp  time.cpp
Modules/Filesystem/: module.cpp  path.cpp
Modules/include/: _lumin_modules_api.h
Modules/require/: console.luau  date_time.luau  filesystem.luau
SDK/: common.cpp  config_utils.hpp  main.cpp  winmain.cpp  winutil.cpp  winutil.hpp
SDK_/: common.cpp  common.hpp
Std/: CMakeLists.txt  LazyUserdataType.hpp  Lazy_light_type.hpp  Lazy_type.hpp  Reader.cpp  Writer.cpp  gpm.hpp  gpm_api.h  lua_utility.hpp  std.hpp
Std/Cinterop/: StructInfo.cpp  Struct_info.cpp  binding.cpp  cinterop.cpp  cinterop.hpp
Std/Fs/: Directory.cpp  File.cpp  Symlink.cpp  fs.cpp  fs.hpp  util.cpp
Std/GUI/: Window.cpp  gui.cpp  gui.hpp
Std/IO/: io.cpp
Std/Io/: io.cpp
Std/Json/: json.cpp  json.hpp
Std/Mathx/: SquareMatrixType.hpp  VectorType.hpp  mathx.cpp  mathx.hpp  misc.hpp
Std/OS/: os.cpp  os.hpp  platform_specific_impl.cpp  windows.cpp  windows_api.cpp
Std/OS_/: os.cpp
Std/Os/: os.hpp  windows.cpp
Std/Process/: Child.cpp  Pid.cpp  process.cpp  process.hpp
Std/Time/: NanoTime.cpp  Nano_time_point.cpp  Time.cpp  TimeSpan.cpp  Time_point.cpp  Time_span.cpp  module.cpp  time.hpp
Std/std/: _Cinterop.luau  _Require_config.luau  _Time.luau  buffer_array.luau  fs.luau  init.luau  process.luau  types.luau
_/: run.cpp
cli/: WinMain.cpp  cli.hpp  common.cpp  config_utils.hpp  lua_base.hpp  main.cpp  run.cpp  win_utility.hpp
cli/windows_host/: host.cpp  host_main.hpp  winmain.cpp
common/: Error_info.hpp  Generic_userdata_template.hpp  TaggedType.hpp  Type.hpp  Userdata_template.hpp  common.hpp  misc.hpp  timeutils.hpp  type_hash.cpp
common/common/: Type.hpp  error_trail.hpp
common/halua/: common.hpp  userdata.hpp
core/: compile_options.cpp  core.hpp  dll_library.cpp  lib.hpp  libdll.cpp  lumin_funcs.cpp  lumin_init.cpp  script_utils.cpp
core/include/: luminutils.h
core/lib/: dll.cpp
docs/api/: globals.md
docs/c-api/: dluau.md  overview.md
editor/: .nvim.lua
extras/require/: Logger.luau  time.luau
extras/time/: Duration.cpp  High_precision_time.cpp  Time.cpp  module.cpp  module.hpp
host/: host.cpp
host/linux/: main.cpp
host/windows/: winmain.cpp
lib/: api.cpp  console.luau  context_utils.cpp  core.hpp  dll.cpp  dluau_require.cpp  dluau_require.cpp_  filesystem.luau  funcs.cpp  init.cpp  lfuncs.cpp  libmeta.cpp  libscan.cpp  lumin_funcs.cpp  lumin_init.cpp  meta.cpp  misc.cpp  precompile.cpp  precompiled.cpp  print.cpp  run.cpp  scan.cpp  script_utils.cpp  sdl.luau  shared.hpp  stringatom.cpp  types.cpp
lib/dlimport/: binding.cpp  dlmodule.cpp  lib.cpp  lib.hpp  util.cpp
lib/dynlib/: Dllmodule.cpp  (+4 more)
library_exports/: Renderer.luau  SDL2.luau  console.luau  filesystem.luau
lsp/: dluau-api-docs.json  dluau-api.d.luau  dluau-core.d.luau  dluau-core_docs.json  dluau-std.d.luau  dluau-std_docs.json
meta/: api.cpp  lfuncs.cpp
minlu/: _force_export.cpp  api.cpp  luau_functions.cpp
minluau/: _force_export.cpp  api.cpp  defs.hpp
modules/: Event.cpp  Rect.cpp  Renderer.cpp  Window.cpp  bindings.cpp  common.hpp  desktop.hpp  enums.cpp  filesystem.hpp  minluau_modules_api.h
require/: console.luau  desktop.luau  filesystem.luau  init.luau
sdk/: common.cpp  main.cpp
sdl2/: Event.cpp  Rect.cpp  Renderer.cpp  Window.cpp  bindings.cpp  common.hpp  enums.cpp
src/: Error.cpp  Error.hpp  Require.cpp  WinMain.cpp  common.cpp  common.hpp  global.cpp  libos.cpp  libprint.cpp  libscan.cpp  libtask.cpp  libtask.cpp~  lua_base.hpp  precompile.cpp  print.cpp  require.cpp  run.cpp  scan.cpp  shared.hpp  shared.hpp_  stringatom.cpp  task.cpp  type.cpp  version.cpp  win_utility.cpp
standard/: stdminlu_api.h
std/: _luminstd_api.h  api.hpp  date_time.hpp  defs.hpp  filesystem.cpp  path.cpp  userdata_lazybuilder.hpp
std.require/: console.luau  desktop.luau  filesystem.luau
stdexports/: console.luau  filesystem.luau  fs.luau  init.luau
stdlib/: class_library.hpp  date_time.hpp  lazy_type_utils.hpp
stdlib-require/: console.luau  date_time.luau  desktop.luau  filesystem.luau
tests/: aggregates.luau  aggregates.luau_  c_types.luau  dlfind.luau  drequire.luau  drequire2.luau  guitest.luau  lazyrequire.luau  os.luau  precomp.luau  print.luau  require.luau  script.luau  std_dependency_preloading.luau  struct.luau  struct_info.luau  struct_info_test.luau  task.luau  test_file.luau  test_file.luau_  test_file2.luau  test_file3.luau  test_json.luau  test_task.luau  version.luau  version.luau_  window.luau
(+134 files in other folders)
